--- a/style.css
+++ b/style.css
@@ -4,14 +4,17 @@
   box-sizing: border-box;
 }
 .container {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to right,
     #00416a,
     #799f0c,
     #cc9900,
     #799f0c,
     #00416a
-  );
+  ); */
+  background-image: linear-gradient(to right, #101010da, #cbcaa511, #101010da),
+    url("./images/background.jpg");
+  background-size: cover;
   height: 100vh;
   width: 100vw;
   position: absolute;
@@ -25,8 +28,8 @@
   width: 50vw;
   /* box-shadow: inset 0 -3em 3em rgba(255, 255, 255, 0.1),
     0 0 0 2px rgb(255, 255, 255, 0.1), 0.3em 0.3em 1em rgba(250, 247, 247, 0.3); */
-  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.466),
+    0 0 0 2px rgba(192, 178, 178, 0.466), 0.3em 0.3em 1em rgba(0, 0, 0, 0.637);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -44,7 +47,13 @@
 }
 
 .front {
-  background-image: url("./images/finalback.jpg");
+  background-image: linear-gradient(
+      250deg,
+      rgba(0, 0, 0, 0.733),
+      rgba(255, 255, 255, 0.055),
+      rgba(0, 0, 0, 0.384)
+    ),
+    url("./images/finalback.jpg");
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -82,7 +91,7 @@
 .header_box {
   height: 9vh;
   width: 22vh;
-  background-color: darkgoldenrod;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,8 +99,8 @@
   cursor: pointer;
   font-size: 1rem;
   font-weight: 600;
-  box-shadow: inset 0 -3em 3em rgba(255, 255, 255, 0.1),
-    0 0 0 2px rgb(255, 255, 255, 0.1), 0.3em 0.3em 1em rgba(250, 247, 247, 0.3);
+  box-shadow: inset 0 -1em 3em rgba(0, 0, 0, 0.3),
+    0 0 0 2px rgb(255, 255, 255, 0.1), 0.3em 0.2em 1em rgba(250, 247, 247, 0.3);
   transition: 0.3s;
 }
 .header_box:hover {
@@ -108,7 +117,7 @@
   height: 15rem;
   width: 14rem;
   margin: auto;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.08);
 }
 .detail_content_box {
   position: relative;
@@ -122,21 +131,22 @@
   margin: 2rem;
 }
 .player_no {
-  color: #0c2340;
+  color: white;
 }
 .win_box {
   height: 5rem;
   width: 10rem;
-  background-color: darkgoldenrod;
+  border: 1.2px solid #fefefe;
   border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 2rem;
-  color: rgb(29, 27, 27);
+  color: rgb(233, 215, 215);
 }
 .active_player {
-  box-shadow: inset 0 -3em 3em rgba(255, 255, 255, 0.3),
+  background-color: rgba(0, 0, 0, 0.397);
+  box-shadow: inset 0 -1em 3em rgba(255, 255, 255, 0.3),
     0 0 0 2px rgb(255, 255, 255, 0.5), 0.3em 0.3em 1em rgba(250, 247, 247, 0.7);
 }
 /* .dropbtn {
@@ -159,9 +169,11 @@
 }
 .option {
   padding: 0.6rem;
+  font-weight: 600;
 }
 .option:hover {
-  background-color: #799f0c;
+  background-color: #201d1d;
+  color: white;
 }
 
 .HTP_modal,
@@ -245,11 +257,15 @@
   font-size: 0;
   color: #cc9900;
 }
-.chances,
+
 .win1,
 .win2 {
-  color: #2e2e05;
+  color: #cc9900;
   margin: 0.5rem;
+}
+.chances {
+  color: rgb(246, 248, 250);
+  padding: 0.5rem;
 }
 .showRes {
   display: block;
@@ -270,4 +286,25 @@
 }
 .result_display {
   margin-right: 0.65rem;
+}
+.BoxRestartbtn {
+  height: 9vh;
+  width: 22vh;
+  color: white;
+  background-color: rgb(3, 6, 19);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem auto;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+  box-shadow: inset 0 -0.3em 3em rgba(238, 239, 243, 0.034),
+    0 0 0 2px rgba(247, 244, 244, 0.658), 0.5em 0.5em 1em rgba(1, 4, 14, 0.925);
+  transition: 0.3s;
+}
+.BoxRestartbt:hover {
+  box-shadow: 1px 0px 2px 1px rgba(236, 231, 231, 0.993);
+  outline: none;
+  border: none;
 }
